--- a/app/templates/datepicker.html
+++ b/app/templates/datepicker.html
@@ -14,9 +14,10 @@
       <tbody>
       <tr ng-repeat="week in weeks">
         <td ng-repeat="day in week">
-          <span
+          <span ng-if="isAvailable(day)"
             ng-class="{'now':isNow(day),'active':isSameDay(day),'disabled':(day.getMonth()!=date.getMonth()),'after':isAfter(day),'before':isBefore(day)}"
             ng-click="setDate(day)" ng-bind="day.getDate()"></span>
+          <span ng-if="!isAvailable(day)" class="unavailable" ng-bind="day.getDate()"></span>
         </td>
       </tr>
       </tbody>
